assets/css/main.css
/* ... */
		input[type="checkbox"]:checked + label:before,
		input[type="radio"]:checked + label:before {
			background: #666;
			border-color: #666;
			color: #ffffff;
			content: '\f00c';
		}

		input[type="checkbox"]:focus + label:before,
		input[type="radio"]:focus + label:before {
			border-color: #e89980;
			box-shadow: 0 0 0 1px #e89980;
		}

	input[type="checkbox"] + label:before {
		border-radius: 6px;
	}

	input[type="radio"] + label:before {
		border-radius: 100%;
	}

	::-webkit-input-placeholder {
		color: #999 !important;
		opacity: 1.0;
	}

	:-moz-placeholder {
		color: #999 !important;
		opacity: 1.0;
	}

	::-moz-placeholder {
		color: #999 !important;
		opacity: 1.0;
	}

	:-ms-input-placeholder {
		color: #999 !important;
		opacity: 1.0;
	}

	.formerize-placeholder {
		color: #999 !important;
		opacity: 1.0;
	}

/* Box */

	.box {
		background: #fff;
		border-radius: 0px; /*roundness of corners*/
		border-color: #e5e5e5;
		border-style: solid;
		border-width: 1px 1px 1px 1px;
		/*box-shadow: 0 2px 0 0 #e5e5e5;*/
		/*box-shadow: 2px 2px 2px 2px #e5e5e5;*/
		box-shadow: none !important;
		margin: 0 0 1em 0;
		padding: 1.5em;
	}

		.box > :last-child {
			margin-bottom: 0;
		}

		.box.alt {
			background: none !important;
			border-radius: 0 !important;
			box-shadow: none !important;
			margin: 0 0 2em 0;
			padding: 0 !important;
		}

        .box.features {
            border-style: none;
			margin: 0 0 2em 0;
        }

        .box.features .image {
            margin: 0 0 1.5em 0;
        }

		.box.features .features-row {
			border-top: solid 2px #e5e5e5;
			position: relative;
		}

			.box.features .features-row:after {
				clear: both;
				content: '';
				display: table;
			}

			.box.features .features-row section {
				float: left;
				padding: 1.5em;
				width: 50%;
			}

				.box.features .features-row section :last-child {
					margin-bottom: 0;
				}

				.box.features .features-row section:nth-child(2n) {
					padding-right: 0;
				}

					.box.features .features-row section:nth-child(2n):before {
						background: #e5e5e5;
						content: '';
						display: block;
						height: 100%;
						margin-left: 1.5em;
						position: absolute;
						top: 0;
						width: 2px;
					}

				.box.features .features-row section:nth-child(2n-1) {
					padding-left: 0;
				}

			.box.features .features-row:first-child {
				border-top: 0;
			}

				.box.features .features-row:first-child section {
					padding-top: 0;
				}

			.box.features .features-row:last-child {
				padding-bottom: 0;
			}

				.box.features .features-row:last-child section {
					padding-bottom: 0;
				}

		.box.special {
			text-align: left;
			margin: -1em 0.5em 0.5em -1em;
		}

            /* for about box flush with bottom of banner, top=0 and bottom=-1 */
            /* for below PhD student, above buttons, top=-6, bottom=6 */
            /* for below about, top=24, bot=6 */
            /* free floating about: top -1, bot 1.5 */
			.box.special:first-child {
				margin-top: -1em; /* height of about box and bottom of banner*/
				margin-left: 0em;
				margin-right: -1em;
                margin-bottom: 3.5em; /* controls width between about box and start of main boxes, by moving banner */
			}

			.box.special:last-child {
				margin-bottom: 0em;
				margin-right: 0em;
			}

        /* BOXES FULL SCREEN WIDTH */  
		.box.simple {
			text-align: left;
			/*margin: 1em -1em 1em 0em;*/
            /* this is hacky but it keeps the image full-width */
            margin: 0em calc(100% - 100vw);
            padding: 1.25em calc(100vw - 100%) 3.25em calc(100vw - 100%);
		}

			/*list elements for simple layout*/
			.box.simple ul { 
				list-style: disc;
				padding-left: 1em;
			}

			.box.simple li { 
				/*display: inline-block;*/
                display: list-item;
			}

			.box.simple img { 
				width: 10em;
			}

                .box.simple:first-child {
                    margin-top: -2.5em;
                }

                .box.simple:last-child {
                    margin-bottom: -4em;
                    padding-bottom: 4.5em; /* padding below bottom of thumbnails */
                }   

        /* BOXES FULL SCREEN WIDTH */
        .box.picture {
            text-align: left;
            /*margin: 1em -1em 1em 0em;*/
            /* this is hacky but it keeps the image full-width */
            margin: 0em calc(100% - 100vw);
            padding: 1.25em calc(100vw - 100%) 3.25em calc(100vw - 100%);
            background-image: url("images/overlay.png"), url("../../images/banner_blur.jpg");
            background-attachment: scroll, fixed;
            /*background-repeat: no-repeat;*/
            background-size: auto, cover;
        }

            /*list elements for picture layout*/
            .box.picture ul {
                list-style-type: disc;
                padding-left: 1em;
            }

            .box.picture li {
                /*display: inline-block;*/
                display: list-item;
                color: #fff;
            }

            .box.picture img {
                width: 10em;
            }

            .box.picture body {
                color: #fff;
            }

            .box.picture p {
                color: #fff;
            }

            .box.picture b {
                color: #fff;
            }

            .box.picture strong {
                color: #fff;
            }

            .box.picture h4 {
                color: #fff;
            }
    
            .box.picture h2 {
                color: #fff;
            }

            .box.picture h2:after {
                background: rgba(255, 255, 255, 0.8);
            }
            
            /*.box.picture a {
                color: #E8D009;
            }*/

		.box.title {
			text-align: left;
			margin: 0em 0em -0.5em -1em;
			padding: 1em 2em 1em 2em;
			/*padding: 0em 2em 0em 2em;*/
			/*display: inline-block;*/
		}
/* ... */

